# rschess

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md
src/: board.rs  errors.rs  fen.rs  helpers.rs  img.rs  lib.rs  main.rs  pgn.rs  position.rs  test.rs
