[package]
name = "rschess"
version = "0.2.0"
edition = "2021"
description = "A Rust chess library with the aim to be as feature-rich as possible"
repository = "https://github.com/Python3-8/rschess"
keywords = ["chess", "pgn", "fen", "uci", "san"]
license = "MIT"

[dependencies]
image = "0.25.1"
regex = "1.10.4"
thiserror = "1.0.61"
