[package]
name = "rschess"
version = "2.0.0"
edition = "2021"
description = "A Rust chess library with the aim to be as feature-rich as possible"
repository = "https://github.com/Python3-8/rschess"
keywords = ["chess", "pgn", "fen", "uci", "san"]
license = "MIT"

[dependencies]
image = { version = "0.25.1", optional = true }
include_dir = { version = "0.7.3", optional = true }
nsvg = { version = "0.5.1", optional = true }
regex = { version = "1.10.4", optional = true }
thiserror = "1.0.61"

[features]
pgn = ["dep:regex"]
img = ["dep:image", "dep:include_dir", "dep:nsvg"]
